# DormDash

./: README.md
dorm_dash_firmware/: CMakeLists.txt  app.overlay  prj.conf  west.yml  zephyr.txt
dorm_dash_firmware/dts/bindings/: dormdash,motor-pwms.yaml  dormdash,qenc-gpios.yaml  vendor-prefixes.txt
dorm_dash_firmware/src/: distance_sensor.c  distance_sensor.h  leds.c  leds.h  main.c  motor_control.c  motor_control.h  pid.c  pid.h  pwm_motor.c  pwm_motor.h  quadrature_decoder.c  quadrature_decoder.h  tests.c  tests.h  uart_circ_dma_ex.c  uart_circ_dma_ex.h  uart_echo.c  uart_echo.h
dorm_dash_gui/dorm_dash/: package-lock.json  package.json
dorm_dash_gui/dorm_dash/src/app/: globals.css  layout.tsx  page.tsx
dorm_dash_gui/dorm_dash/src/app/components/: Control.tsx  DormyInUse.tsx  Navbar.tsx  Tab.tsx
dorm_dash_software/mcu_messenger/: package.xml  setup.cfg  setup.py
dorm_dash_software/mcu_messenger/mcu_messenger/: mcu_interface_node.py  mcu_messaging.py  parameter_handling.py  zenoh_controller.py  zenoh_test.py
dorm_dash_software/zenoh_minimal/: zenoh_pub.py  zenoh_sub.py
